gdk: when scrolling windows, use the correct source for copying from

Previously we were copying from the toplevel window unconditionally.
This is wrong in two cases:
1) composited windows
2) different visuals

So when encountering such a window in the hierarchy, we stop going up
and just use the latest window as the source.

https://bugzilla.gnome.org/show_bug.cgi?id=643416